[gd_scene load_steps=18 format=2]

[ext_resource path="res://scener/Filuren.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/day_night.gd" type="Script" id=2]
[ext_resource path="res://scripts/EnemySpawner.gd" type="Script" id=3]
[ext_resource path="res://sprites/vägg.png" type="Texture" id=4]
[ext_resource path="res://sprites/mark.png" type="Texture" id=5]
[ext_resource path="res://scener/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/vatten.png" type="Texture" id=7]
[ext_resource path="res://scripts/värld_för_navigation.gd" type="Script" id=8]
[ext_resource path="res://scener/fiender.tscn" type="PackedScene" id=9]
[ext_resource path="res://scener/bunny.tscn" type="PackedScene" id=10]
[ext_resource path="res://scener/markör.tscn" type="PackedScene" id=11]

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 ) ]

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=7]
resource_local_to_scene = true
0/name = "mark.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 5 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "vatten.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "vägg.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 8 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="NavigationPolygon" id=9]
vertices = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 ) ]

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=11]
0/name = "vatten.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "mark.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 9 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "vägg.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 10 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="värld_för_navigation" type="Node2D"]
script = ExtResource( 8 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="KinematicBody2D2" parent="." instance=ExtResource( 9 )]
position = Vector2( 306, 260 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 9 )]
position = Vector2( 488, 257 )
z_index = 4

[node name="TileMap" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource( 7 )
cell_size = Vector2( 32, 32 )
centered_textures = true
bake_navigation = true
format = 1
tile_data = PoolIntArray( -65489, 2, 0, -65488, 2, 0, -65487, 2, 0, -65486, 2, 0, -65485, 2, 0, -65484, 2, 0, -65483, 2, 0, -65482, 2, 0, -65481, 2, 0, 55, 2, 0, 65583, 2, 0, 65591, 2, 0, 131119, 2, 0, 131127, 2, 0, 196655, 2, 0, 196663, 2, 0, 262191, 2, 0, 262199, 2, 0, 327727, 2, 0, 327735, 2, 0, 393263, 2, 0, 393271, 2, 0, 458799, 2, 0, 458800, 2, 0, 458807, 2, 0, 524335, 2, 0, 524336, 2, 0, 524343, 2, 0, 589871, 2, 0, 589878, 2, 0, 655407, 2, 0, 655414, 2, 0, 720943, 2, 0, 720950, 2, 0, 786479, 2, 0, 786486, 2, 0, 852015, 2, 0, 852022, 2, 0, 917551, 2, 0, 917558, 2, 0, 983087, 2, 0, 983094, 2, 0, 1048623, 2, 0, 1048630, 2, 0, 1114159, 2, 0, 1114166, 2, 0, 1179695, 2, 0, 1179702, 2, 0, 1245231, 2, 0, 1245238, 2, 0, 1310767, 2, 0, 1310774, 2, 0, 1376303, 2, 0, 1376310, 2, 0, 1441839, 2, 0, 1441846, 2, 0, 1507375, 2, 0, 1507382, 2, 0, 1572911, 2, 0, 1572918, 2, 0, 1638447, 2, 0, 1638454, 2, 0, 1703983, 2, 0, 1703990, 2, 0, 1769519, 2, 0, 1769526, 2, 0, 1835055, 2, 0, 1835062, 2, 0, 1900591, 2, 0, 1900598, 2, 0, 1966127, 2, 0, 1966134, 2, 0, 2031663, 2, 0, 2031670, 2, 0, 2097199, 2, 0, 2097206, 2, 0, 2162735, 2, 0, 2162742, 2, 0, 2228271, 2, 0, 2228278, 2, 0, 2293808, 2, 0, 2293814, 2, 0, 2359344, 2, 0, 2359350, 2, 0, 2424880, 2, 0, 2424886, 2, 0, 2490416, 2, 0, 2490422, 2, 0, 2621439, 2, 0, 2555951, 2, 0, 2555958, 2, 0, 2686975, 2, 0, 2621487, 2, 0, 2621494, 2, 0, 2752511, 2, 0, 2687023, 2, 0, 2687030, 2, 0, 2818047, 2, 0, 2752559, 2, 0, 2752566, 2, 0, 2883583, 2, 0, 2818095, 2, 0, 2818102, 2, 0, 2949119, 2, 0, 2883631, 2, 0, 2883638, 2, 0, 3014655, 2, 0, 2949167, 2, 0, 2949174, 2, 0, 3080191, 2, 0, 3014703, 2, 0, 3014710, 2, 0, 3145727, 2, 0, 3080239, 2, 0, 3080246, 2, 0, 3211263, 2, 0, 3145775, 2, 0, 3145782, 2, 0, 3276794, 2, 0, 3276795, 2, 0, 3276799, 2, 0, 3211311, 2, 0, 3211318, 2, 0, 3342332, 2, 0, 3342333, 2, 0, 3342334, 2, 0, 3342335, 2, 0, 3276800, 2, 0, 3276801, 2, 0, 3276802, 2, 0, 3276803, 2, 0, 3276804, 2, 0, 3276805, 2, 0, 3276806, 2, 0, 3276807, 2, 0, 3276808, 2, 0, 3276809, 2, 0, 3276810, 2, 0, 3276811, 2, 0, 3276812, 2, 0, 3276813, 2, 0, 3276814, 2, 0, 3276815, 2, 0, 3276816, 2, 0, 3276817, 2, 0, 3276818, 2, 0, 3276819, 2, 0, 3276820, 2, 0, 3276821, 2, 0, 3276822, 2, 0, 3276823, 2, 0, 3276824, 2, 0, 3276825, 2, 0, 3276826, 2, 0, 3276827, 2, 0, 3276828, 2, 0, 3276829, 2, 0, 3276830, 2, 0, 3276831, 2, 0, 3276832, 2, 0, 3276833, 2, 0, 3276834, 2, 0, 3276835, 2, 0, 3276836, 2, 0, 3276837, 2, 0, 3276838, 2, 0, 3276839, 2, 0, 3276840, 2, 0, 3276841, 2, 0, 3276842, 2, 0, 3276843, 2, 0, 3276844, 2, 0, 3276845, 2, 0, 3276846, 2, 0, 3276847, 2, 0, 3276854, 2, 0, 3407871, 2, 0, 3342348, 2, 0, 3342349, 2, 0, 3342390, 2, 0, 3473407, 2, 0, 3407926, 2, 0, 3538942, 2, 0, 3473462, 2, 0, 3604478, 2, 0, 3538998, 2, 0, 3670014, 2, 0, 3604534, 2, 0, 3735550, 2, 0, 3735551, 2, 0, 3670016, 2, 0, 3670017, 2, 0, 3670018, 2, 0, 3670019, 2, 0, 3670020, 2, 0, 3670021, 2, 0, 3670022, 2, 0, 3670023, 2, 0, 3670024, 2, 0, 3670025, 2, 0, 3670026, 2, 0, 3670027, 2, 0, 3670028, 2, 0, 3670029, 2, 0, 3670030, 2, 0, 3670031, 2, 0, 3670032, 2, 0, 3670033, 2, 0, 3670034, 2, 0, 3670035, 2, 0, 3670036, 2, 0, 3670037, 2, 0, 3670038, 2, 0, 3670039, 2, 0, 3670040, 2, 0, 3670041, 2, 0, 3670042, 2, 0, 3670043, 2, 0, 3670044, 2, 0, 3670045, 2, 0, 3670046, 2, 0, 3670047, 2, 0, 3670048, 2, 0, 3670049, 2, 0, 3670050, 2, 0, 3670051, 2, 0, 3670052, 2, 0, 3670053, 2, 0, 3670054, 2, 0, 3670055, 2, 0, 3670056, 2, 0, 3670057, 2, 0, 3670058, 2, 0, 3670059, 2, 0, 3670060, 2, 0, 3670061, 2, 0, 3670062, 2, 0, 3670063, 2, 0, 3670064, 2, 0, 3670065, 2, 0, 3670066, 2, 0, 3670067, 2, 0, 3670068, 2, 0, 3670069, 2, 0, 3670070, 2, 0, 3735552, 2, 0, 3735553, 2, 0 )

[node name="Filuren" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, 30 )

[node name="Day_Night" type="CanvasModulate" parent="."]
script = ExtResource( 2 )

[node name="Enemy_Spawner" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Enemy_Spawner"]
autostart = true

[node name="bygg_tilemap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 11 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="bunny" parent="." instance=ExtResource( 10 )]
position = Vector2( -266, 83 )

[node name="bunny2" parent="." instance=ExtResource( 10 )]
position = Vector2( -243, 103 )

[node name="negspann" parent="." instance=ExtResource( 11 )]

[node name="posspann" parent="." instance=ExtResource( 11 )]

[connection signal="damaged" from="Filuren" to="HUD" method="_on_Filuren_damaged"]
[connection signal="died" from="Filuren" to="." method="_on_Filuren_died"]
[connection signal="hunger" from="Filuren" to="HUD" method="_on_Filuren_hunger"]
[connection signal="day_tick" from="Day_Night" to="Filuren" method="_on_Day_Night_day_tick"]
[connection signal="day_tick" from="Day_Night" to="Enemy_Spawner" method="_on_Day_Night_day_tick"]
[connection signal="night_tick" from="Day_Night" to="Filuren" method="_on_Day_Night_night_tick"]
[connection signal="night_tick" from="Day_Night" to="Enemy_Spawner" method="_on_Day_Night_night_tick"]
[connection signal="timeout" from="Enemy_Spawner/Timer" to="Enemy_Spawner" method="_on_Timer_timeout"]
